subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Typing_Invalid_18.while
int f(int x) {
    if(x) {
      return x;
    } else {
      return -1;
    }
}